Fix for viewport overlap just before breakpoint

--- a/ui/stylesheets/generic/generic.sass
+++ b/ui/stylesheets/generic/generic.sass
@@ -28,3 +28,5 @@ p
     @media(min-width: 600px)
         width: 600px
         margin: 50px auto
+        max-width: 100%
+        box-sizing: border-box
